# vardelta

./: .gitignore  examples.ipynb  pyproject.toml
src/vardelta/: Delta.py  __init__.py
tests/: test_Delta.py
